--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ UseBB 0.3 Changelog
 - Fixed bug 997622: Source code compression strips newlines out of textareas.
 - Fixed server load to work on some systems.
 - Fixed Undefined index: NoSuchUser on send new password page.
+- Fixed a security exploit.
 - Server load in template parser moved to function class.
 - Forum stats box moved to function class.
 - Avatars now have an empty alternate text - looks better in Mozilla when image is
