Fixed IP Spoofing Vulnerability.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -20,6 +20,7 @@ UseBB 0.3 Changelog
 - Fixed bug 1035507: ob_gzhandler + URL-Rewriter error.
 - Fixed bug 1037973: No error on invalid website URL (profile).
 - Fixed bug 1037971: Color-bbcode uses font-tags.
+- Fixed IP Spoofing Vulnerability.
 - Fixed Undefined index: NoSuchUser on send new password page.
 - Fixed a security vulnerability.
 - Removed all strtolower() occasions - improves translation possibilities.
