--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ UseBB 0.5 Changelog
 ------------------------------
 
 - Added topic review feature.
+- Fixed security issue concerning quoting posts.
 - Make edit post location bar contain full path.
 - Fixed bad smiley parsing code.
 
