--- a/Changelog.txt
+++ b/Changelog.txt
@@ -26,6 +26,7 @@ UseBB 0.5 Changelog
 - Fixed bad smiley parsing code.
 - Fixed too much stripping of backslashes.
 - Fixed bad unhtml() function.
+- Fixed security issue concerning topic subscription.
 - Able to view number of hidden users and hidden users marked for admins.
 - Usernames and passwords only take alphanumeric characters.
 - Don't send subscription mail to poster himself.
