--- a/Changelog.txt
+++ b/Changelog.txt
@@ -28,6 +28,7 @@ UseBB 0.6 Changelog
 - Fixed bug which changed members' post count when deleting with increase_post_count disabled.
 - Fixed a few missing unhtml() calls.
 - Fixed security issue with URL matching (XSS vulnerability in IE).
+- Fixed security issue with color BBCode (XSS vulnerability in IE).
 - Fixed some wrong sorting of categories and forums in various files.
 - Renamed kick_user_to_only_viewable_forum to single_forum_mode.
 - Do not add session ID's for Googlebot.
